<resources>
    <string name="app_name">Salvame</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="line">LINE</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="company">Company</string>
    <string name="webpage">Webpage</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="delete">delete</string>
</resources>
