<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="15dp"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">
            <TextView
                android:id="@+id/contact_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/contact_name_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:visibility="invisible"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/contact_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/name"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/contact_name"
                android:layout_alignRight="@+id/contact_name"
                android:contentDescription="@string/delete"
                app:srcCompat="@android:drawable/ic_menu_delete" />

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_name_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/contact_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_name"
                android:ems="10"
                android:text="@string/email"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/contact_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_email_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/contact_phone_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_email"
                android:ems="10"
                android:text="@string/phone_number"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/contact_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_phone_number_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/contact_whatsapp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_phone_number"
                android:ems="10"
                android:text="@string/whatsapp"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/contact_whatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_whatsapp_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/contact_line_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_whatsapp"
                android:ems="10"
                android:text="@string/line"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/contact_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_line_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/contact_company_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_line"
                android:ems="10"
                android:text="@string/company"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/contact_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_company_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/contact_webpage_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_company"
                android:ems="10"
                android:text="@string/webpage"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/contact_webpage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_webpage_title"
                android:clickable="true"
                android:focusable="true"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="16sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>